add one sentence description of Poisson Background model

--- a/vignettes/Workflow_WTA_kidney.Rmd
+++ b/vignettes/Workflow_WTA_kidney.Rmd
@@ -93,7 +93,8 @@ paste("## of Negative Probes:", sum(fData(kidney)$Negative))
 ```
 
 
-Every ROI and negative probe gets a model parameter values.
+This model estimates a feature factor for each negative probe and a background size factor for each ROI. 
+
 ```{r}
 kidney <- fitPoisBG(kidney)
 
