--- a/vignettes/Workflow_WTA_kidney.Rmd
+++ b/vignettes/Workflow_WTA_kidney.Rmd
@@ -194,7 +194,7 @@ The feature_high_fitNBth labeled genes are ones well above background that will 
 ```{r}
 set.seed(123)
 
-kidney <- fitNBth(kidney)
+kidney <- fitNBth(kidney, split = TRUE)
 
 features_high <- rownames(fData(kidney))[fData(kidney)$feature_high_fitNBth == 1]
 
